<?xml version="1.0"?>                                                      <!-- Header XML standar -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?> <!-- Validasi schema ROS2 package.xml -->
<package format="3">                                                        <!-- Format package.xml ROS2 (format 3) -->
  <name>huskybot_gazebo</name>                                              <!-- Nama package (harus sama dengan folder dan CMakeLists.txt) -->
  <version>0.0.0</version>                                                  <!-- Versi package (bisa diubah sesuai release) -->
  <description>Gazebo worlds and launch files for Huskybot simulation</description> <!-- Deskripsi package (WAJIB diisi, sebaiknya jelas) -->
  <maintainer email="mungguran.jezzy.putra@gmail.com">Jezzy Putra Munggaran</maintainer>          <!-- Nama & email maintainer (WAJIB diisi, sebaiknya email valid) -->
  <license>Apache-2.0</license>                              <!-- Lisensi package (WAJIB diisi, misal: Apache-2.0, BSD-3-Clause, MIT) -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>                      <!-- Tambahkan jika ingin pastikan dependency Gazebo ROS -->                     <!-- Dependency utama build tool ROS2 (WAJIB untuk package CMake) -->

  <test_depend>ament_lint_auto</test_depend>                                <!-- Dependency untuk linting otomatis saat test -->
  <test_depend>ament_lint_common</test_depend>                              <!-- Dependency untuk linting umum saat test -->

  <export>
    <build_type>ament_cmake</build_type>                                    <!-- Tipe build system (ament_cmake untuk CMake) -->
  </export>
</package>