<?xml version="1.0"?>
<package format="3">
  <name>husky_description</name>
  <version>0.6.10</version>
  <description>Clearpath Husky URDF description</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author>
  <author email="pmukherj@clearpathrobotics.com">Prasenjit Mukherjee</author>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>
  <author email="dash@clearpathrobotics.com">Devon Ash</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>xacro</build_depend>
  <build_depend>urdf</build_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>

  <!-- Optional: add mesh and sensor dependencies if needed -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
