<?xml version="1.0"?>  <!-- Deklarasi XML, wajib di awal file XML -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>  <!-- Validasi schema package.xml ROS2 -->
<package format="3">  <!-- Format package.xml ROS2 (format 3, standar ROS2) -->
  <name>yolov12_msgs</name>  <!-- Nama package, harus unik di workspace -->
  <version>0.0.0</version>  <!-- Versi package, bisa diubah jika release -->
  <description>TODO: Package description</description>  <!-- Deskripsi package, sebaiknya diisi detail fungsi package -->
  <maintainer email="robotmania@todo.todo">robotmania</maintainer>  <!-- Nama & email maintainer, WAJIB diisi dengan email aktif -->
  <license>TODO: License declaration</license>  <!-- Lisensi package, WAJIB diisi (misal: MIT, Apache-2.0, BSD-3-Clause, dsb) -->

  <buildtool_depend>ament_cmake</buildtool_depend>  <!-- Build tool utama ROS2 (ament_cmake) -->

  <buildtool_depend>rosidl_default_generators</buildtool_depend>  <!-- Build tool untuk generate message interface ROS2 -->
  <depend>std_msgs</depend>  <!-- Dependency ke std_msgs (untuk Header di message) -->
  <depend>builtin_interfaces</depend>  <!-- Dependency ke builtin_interfaces (untuk tipe waktu dsb di Header) -->
  <exec_depend>rosidl_default_runtime</exec_depend>  <!-- Dependency runtime ROS2 untuk message interface -->
  <member_of_group>rosidl_interface_packages</member_of_group>  <!-- Agar dikenali sebagai package interface ROS2 -->

  <test_depend>ament_lint_auto</test_depend>  <!-- Dependency untuk linting otomatis saat testing -->
  <test_depend>ament_lint_common</test_depend>  <!-- Dependency linting umum ROS2 -->

  <export>
    <build_type>ament_cmake</build_type>  <!-- Build type package ini (ament_cmake) -->
  </export>
</package>